# d.w.a

./: settings.gradle
.github/workflows/: android_build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Controller.cpp  Controller.h  MapperMMC1.cpp  MapperMMC1.h  PPU.cpp  PPU.h  native-lib.cpp
app/src/main/cpp/recompiled/: Bank00.cpp  Bank01.cpp  Bank02.cpp  Bank03.cpp  Dispatcher.cpp  Header.cpp  cpu_shared.cpp  cpu_shared.h
app/src/main/java/com/canc/dwa/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
runtime/: asm_to_c.py  gui_icons.sh  icons.sh  system_gui.sh  touch_controls.sh
runtime/.old/: asm_to_c.py
